--- a/src/components/layouts/css/sidebar.module.css
+++ b/src/components/layouts/css/sidebar.module.css
@@ -1,5 +1,5 @@
 .sidebar_main {
-    background: #e4a5b2;
+    background: #120657;
     width: 18%;
     height: 100vh;
     padding: 2rem 1rem;
@@ -29,7 +29,7 @@
     cursor: pointer;
 }
 .list_option a:hover{
-    color: blueviolet;
+    color: rgb(11, 10, 77);
     transition: 0.5s;
 }
 
