--- a/src/components/layouts/css/navbar.module.css
+++ b/src/components/layouts/css/navbar.module.css
@@ -1,12 +1,14 @@
 .navbar_main {
-  width: 100%; /* Ancho */
-  height: 80px; /* Alto */
-  background: #766acb;
+  width: 82%; 
+  height: 80px; 
+  background: #766acb; 
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  position: absolute; 
+  right: 0; 
 }
 
 .section_menu {
