--- a/src/components/auth/login.module.css
+++ b/src/components/auth/login.module.css
@@ -23,9 +23,11 @@
     padding: 0; 
     font-family: Raleway, sans-serif;
   }
-  body {
+.contentMain{
     background: linear-gradient(90deg, var(--negro), var(--purpura-oscuro), var(--negro));
-    overflow: hidden;   
+    overflow: hidden;  
+    width: auto;
+    height: 633px; 
   }
 
 /* CONTENEDOR DEL LOGIN */
@@ -34,7 +36,7 @@
     width: 60%;
     height: 500px;
     position: relative;
-    top: 150px;
+    top: 130px;
     display: flex; 
     margin: 0 auto;
   }
