--- a/src/components/pages/crearEmpleado.module.css
+++ b/src/components/pages/crearEmpleado.module.css
@@ -20,6 +20,8 @@
   }
   
   .tittle{
+    font-size: 25px;
+    font-family: sans-serif;
     color: var(--azul-oscuro);
   }
   
@@ -87,84 +89,44 @@
     z-index: 1111;
   }
   
-  .input:focus,
-  .input:valid{
-      color: #4CAF50;
-      border:1px solid #4CAF50;
+  .input:focus{
+      color: var(--azul-profundo-oscuro);
+      border:1px solid var(--azul-profundo-oscuro);
     }
   
   .label{
     position: absolute;
     font-size: 1.0rem;
-    color: #f0ffff;
     padding: 0 25px;
     margin: 0 30px;
-    background-color:#f0ffff;
+    background-color:var(--blanco);
     transition:  0.2s ease;
   }
   
   .input:focus + .label,
   .input:valid + .label{
-    color: #4CAF50;
+    color: var(--gris-oscuro);
     height: 30px;;
     line-height: 30px;
     padding: 0 12px;
     z-index: 1111;
     transform: translate(-15px,-16px) scale(0.88);
   }
-  
-  .texTarea{
-    position: absolute;
-    width: 100%;
-    outline: none;
-    font-size: 0.8rem;
-    padding: 0 20px;
-    border: none;
-    line-height: 40px;
-    border-radius: 10px;
-    border: 1px solid var(--gris-claro);
-    background: transparent;
-    transition: 0.1s ease;
-    z-index: 1111;
-  }
-  
-  .texTarea:focus,
-  .texTarea:valid{
-    color: #03b912;
-    border: 1px solid #03b912;
-  }
-  
-  .labelTarea{
-    position: absolute;
-    font-size: 1.0rem;
-    color: #f0ffff;
-    padding: 0 25px;
-    margin:  0 30px;
-    background-color: #f0ffff;
-    transition: 0.2s ease;
-  
-  }
-  
-  .texTarea:focus + .labelTarea,
-  .texTarea:valid + .labelTarea{
-    color: #03b912;
-    height: 30px;;
-    line-height: 30px;
-    padding: 0 12px;
-    z-index: 1111;
-    transform: translate(-15px,-16px) scale(0.88);
-  }
-  
+
   .button {
     position: absolute;
-    background-color: #4CAF50; /* Color de fondo del botón */
-    color: white; /* Color del texto del botón */
-    padding: 10px 20px; /* Espacio interno del botón */
-    border: none; /* Eliminamos el borde del botón */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor a una mano al pasar el ratón por encima */
+    background-color: var(--verde); 
+    color: var(--blanco); 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
     right: 30px;
     bottom: 20px;
+
+    &:hover{
+      background: var(--verde-claro);
+    }
   }
   
   .lines{
