--- a/src/components/auth/login.module.css
+++ b/src/components/auth/login.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 :root{
     --purpura-oscuro: #776BCC;
     --purpura-claro: #C7C5F4;
@@ -219,7 +220,13 @@
     padding-left: 24px;
     font-weight: 700;
     width: 75%;
+    font-size: 16px;
+    font-family: 'Noto serif Ahom', serif;
     transition: .2s;
+
+    &::placeholder{
+      font-style: inherit;
+    }
   }
   
   .loginInput:active,
@@ -261,6 +268,9 @@
   .loginSubmit:hover {
     border-color: var(--purpura-claro-3);
     outline: none;
+  }
+  .iconTittle{
+    font-size: 18px;
   }
   
   .buttonIcon {
